# forge

./: .gitignore  AGENTS.md  CODEX_BRIEF.md  Cargo.toml  README.md  forge-archive-bug.md  forge-skill-multiphase-clarity.md
.forge/: .gitignore  config.toml
.forge/blueprints/: build.toml  code-review.toml  finalize.toml  fix-bug.toml  lint-and-test.toml  new-feature.toml  open-pr.toml  phase.toml  pr-review.toml  refactor-finalize.toml  refactor-phase.toml  refactor.toml  review-codebase.toml  test.toml  verify-base.toml
.forge/instructions/: workspace-and-parallel.md
.forge/plans/: rebuild-april-2026.md
docs/: DASHBOARD_PLAN.md  designing-phase-instructions.md  pr-blueprint-design.md
scripts/: forge-notify
skills/: forge.md
src/: cli.rs  condition.rs  config.rs  detect.rs  dispatch.rs  error.rs  lib.rs  logger.rs  main.rs  model.rs  notify.rs  parser.rs  run_id.rs  run_status.rs  runner.rs  summarize.rs  vars.rs  workspace.rs
src/commands/: clean.rs  generate.rs  init.rs  instruction_guide.md  list.rs  mod.rs  resume.rs  run.rs  status.rs
src/dashboard/: mod.rs
tests/: config_test.rs  dashboard_test.rs  detect_test.rs  engine.rs  init_test.rs  run_test.rs  status_test.rs  workspace_test.rs
