[package]
name = "forge"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"

[dev-dependencies]
tempfile = "3.19.1"
