[package]
name = "forge"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
axum = "0.8"
clap = { version = "4.5.38", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8.20"
ureq = { version = "2.12.1", features = ["json"] }

[dev-dependencies]
tempfile = "3.19.1"
